one last minor update to fix the see through background not covering the skill list

--- a/css/resume.css
+++ b/css/resume.css
@@ -25,7 +25,7 @@
 
 	main {
 		width:80%;
-		height: 151vh;
+		height: 160vh;
 		margin:0 auto;
 		background-color: rgba(99,255,91,0.4);
 	}
